# corridor

./: .gitignore  Cargo.toml  README.md  SPEC.md  corridor-server.py  corridor-terminal.py  corridor.py  corridor.spec  install.sh  requirements.txt  run  server.py  terminal.py
.github/workflows/: release.yml
corridor-rust-project/: Cargo.toml
corridor-rust-project/src/: main.rs
src/: main.rs
