[package]
name = "corridor"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
vt100 = "0.16"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde_json = "1"
